fix deprecated new Locale(lang) with Locale.of(lang)